--- a/news_management/src/main/webapp/css/style.css
+++ b/news_management/src/main/webapp/css/style.css
@@ -39,6 +39,18 @@
 	margin: 5px;
 }
 
+.info-message {
+	background: antiquewhite;
+	height: 40px;
+	padding-bottom: 20px;
+}
+
+.info-message p {
+	text-align: center;
+	font-size: larger;
+	padding-top: 20px;
+}
+
 .main-container {
 	display: flex;
 	flex-wrap: nowrap;
@@ -198,10 +210,12 @@ input[type=password]:focus {
 	float: left;
 	color: white;
 }
-.attention{
-	margin-bottom:15px;
+
+.attention {
+	margin-bottom: 15px;
 	color: red;
 }
+
 .registration-btn {
 	float: right;
 }
