--- a/news_management/src/main/webapp/css/style.css
+++ b/news_management/src/main/webapp/css/style.css
@@ -31,14 +31,20 @@
 	display: block;
 	float: right;
 	width: 300px;
-	margin: 15px;
 }
 
 .header-lang p {
 	float: right;
 	margin: 5px;
 }
-
+.header-lang form{
+	width: auto;
+	font-size: 16px;
+	font-weight: 300;
+	padding-left: 42px;
+	padding-right: 42px;
+	padding-top: 10px;
+}
 .info-message {
 	background: antiquewhite;
 	height: 40px;
@@ -122,7 +128,16 @@
 	float: right;
 	margin: 10px;
 }
-
+.content-item-manage form{
+	width: 100px;
+    font-size: 16px;
+    font-weight: 300;
+    padding-left: 42px;
+    padding-right: 42px;
+    padding-top: 10px;
+    display: flex;
+    float: left;
+}
 .auth-container {
 	background: rgba(35, 43, 85, 0.75);
 	width: 515px;
@@ -233,3 +248,20 @@ input[type=password]:focus {
 	color: white;
 	text-decoration: none;
 }
+.pagination {
+    display: inline-block;
+}
+
+.pagination a {
+    color: black;
+    float: left;
+    padding: 8px 16px;
+    text-decoration: none;
+}
+
+.pagination a.active {
+    background-color: #4CAF50;
+    color: white;
+}
+
+.pagination a:hover:not(.active) {background-color: #ddd;}
